--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Food" asp-action="Index">All Menus</a></li>
                     <li><a asp-area="" asp-controller="Menu" asp-action="Index">Menu Category</a></li>
-                    <li><a asp-area="" asp-controller="OnlineOrder" asp-action="Index">Online Order</a></li>
+                    <li><a asp-area="" asp-controller="User" asp-action="Index">Online Order</a></li>
                 </ul>
             </div>
         </div>
